# Payroll

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  cleanCompileBuild.sh  docker-compose.yml
docs/Diagrams/: PayrollUMLDiagram.drawio
payroll/: CMakeLists.txt
payroll/Interfaces/: IEmployee.h
payroll/entities/includes/: Employee.h
payroll/entities/sources/: Employee.cpp
payroll/handlers/includes/: EmployeeHandler.h
payroll/handlers/sources/: EmployeeHandler.cpp
payroll/src/: main.cpp
payroll/tests/: CMakeLists.txt  test_Employee.cpp  test_GTest.cpp
